Updated Controllers & appsettings.json

--- a/bookNookStarterCode/appsettings.json
+++ b/bookNookStarterCode/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=localhost;Port=3306;Database=booknook;User=root;Password=password123;"
+    "sqlConnection": "Server=localhost;Port=3306;Database=<database_name>;User=root;Password=<password>;"
   },
   "JwtSettings": {
     "validIssuer": "bookNookWebAPI",
